Add code to OMSC4G.html; create style.css

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -1,33 +1,70 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="style.css">
 <html>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<div>
-<h2>C4G: Computing for Social Good</h2>
-<h4>Instructor: Santosh Vempala<br></h4>
-
-<p>
-How can computing help make the world a better place? Can we avoid wars, alleviate homelessness and improve global health using computers? What are the technical challenges that arise and what humanistic issues have to be taken into account and understood in the process? In this C4G course, we explore problems faced by developing countries and underserved populations from a computing perspective. The course will be project-centered with teams of students choosing project topics early in the semester and working towards a deployed solution by the end of the semester.
-</p>
-
-<p><b>Prerequisites</b>: </p><br>
-
-
-<p><b>Grading</b>:<br>
-
-</p>
-<br>
-
-<b>Schedule</b> (tentative):
-<ol>
-<li> Introduction<br>
-
-
-<li>
-
-</ol>
-
-
-</p>
-</div>
+    <section>
+        <h2>C4G: Computing for Social Good</h2>
+        <h4>Instructor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
+        <p>
+            How can computing help make the world a better place? Can we avoid wars, alleviate homelessness and improve global health using computers? What are the technical challenges that arise and what humanistic issues have to be taken into account and understood in the process? In this C4G course, we explore problems faced by developing countries and underserved populations from a computing perspective. The course will be project-centered with teams of students choosing project topics early in the semester and working towards a deployed solution by the end of the semester.
+        </p>
+        <h4>Prerequisites:</h4>
+        <h4>Grading:</h4>
+    </section>
+    <section>
+        <h4>Schedule (tentative):</h4>
+        <ol>
+            <li>Introduction</li>
+            <li>Course goals, team formation</li>
+        </ol>
+    </section>
+    <table>
+        <tr>
+            <th>Topic</th>
+            <th>Learning Objectives</th>
+            <th>Materials</th>
+            <th>Assessments/Activities</th>
+        </tr>
+        <tr>
+            <td>
+                Getting Started
+            </td>
+            <td>
+                - Take on-boarding quiz<br>
+                - Take assessments via proctoring software<br>
+                - Set-up communications in Canvas<br>
+                - Access video materials<br>
+            </td>
+            <td>
+                - On-boarding Quiz w/ ID verification<br>
+                - Getting started completion block
+            </td>
+            <td>
+                - Coming soon
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Lesson 1
+            </td>
+            <td>
+                - Introductions<br>
+                - Course goals<br>
+                - Skills/Interests exercise<br>
+                - Team formation<br>
+            </td>
+            <td>
+                - Skills/Interests exercise
+            </td>
+            <td>
+                - Coming soon
+            </td>
+        </tr>
+    </table>
+    <section>
+        <h4>References:</h4>
+    </section>
 </body>
+</html>
