--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -13,13 +13,17 @@
         <h4>Prerequisites:</h4>
         <h4>Grading:</h4>
     </section>
+    <br>
     <section>
+        <h3>Schedule Option 1 of 2</h3>
         <h4>Schedule (tentative):</h4>
         <ol>
             <li>Introduction</li>
             <li>Course goals, team formation</li>
         </ol>
     </section>
+    <br>
+    <h3>Schedule Option 2 of 2</h3>
     <table>
         <tr>
             <th>Topic</th>
@@ -38,7 +42,7 @@
                 - Access video materials<br>
             </td>
             <td>
-                - On-boarding Quiz w/ ID verification<br>
+                - <a href="">On-boarding Quiz w/ ID verification (link unavailable)</a><br>
                 - Getting started completion block
             </td>
             <td>
@@ -56,10 +60,11 @@
                 - Team formation<br>
             </td>
             <td>
-                - Skills/Interests exercise
+                <strong>- Required reading:</strong><br>
+                <strong>- Optional suggested readings:</strong>
             </td>
             <td>
-                - Coming soon
+                - Skills/Interests exercise
             </td>
         </tr>
     </table>
