Add graded assignments section; check mobile first design.

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -68,6 +68,37 @@
             </td>
         </tr>
     </table>
+
+    <h4>Graded Assignments and Distribution:</h4>
+    <table>
+        <tr>
+            <th>Assignment</th>
+            <th>Weight</th>
+            <th>Brief Description</th>
+        </tr>
+        <tr>
+            <td>
+                On-Boarding Quiz (required to verify identity using proctoring software)On-Boarding Quiz)
+            </td>
+            <td>
+                0% (required to verify identity using proctoring software)
+            </td>
+            <td>
+                Brief "test quiz"
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Assignment Group 1
+            </td>
+            <td>
+                %
+            </td>
+            <td>
+                Content coming soon
+            </td>
+        </tr>
+    </table>
     <section>
         <h4>References:</h4>
     </section>
