Refine OMSC4G.html layout for GT-color consistency; add banner area

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -1,14 +1,23 @@
+<!-- Thanks to Dom from dcode for the table styling code:
+https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
+
 <!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<header>
+		<img src="gt-logo-gold-33percent.png" align="left">
+		<section class="bannertext">
+			<h2>C4G: Computing for Social Good</h2>
+	        <h4>Instructor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
+        </section>	
+	</header>
+	<hr>
     <section>
-        <h2>C4G: Computing for Social Good</h2>
-        <h4>Instructor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
         <p>
-            How can computing help make the world a better place? Can we avoid wars, alleviate homelessness and improve global health using computers? What are the technical challenges that arise and what humanistic issues have to be taken into account and understood in the process? In this C4G course, we explore problems faced by developing countries and underserved populations from a computing perspective. The course will be project-centered with teams of students choosing project topics early in the semester and working towards a deployed solution by the end of the semester.
+            <span class="initialtext">How can computing help</span> make the world a better place? Can we avoid wars, alleviate homelessness and improve global health using computers? What are the technical challenges that arise and what humanistic issues have to be taken into account and understood in the process? In this C4G course, we explore problems faced by developing countries and underserved populations from a computing perspective. The course will be project-centered with teams of students choosing project topics early in the semester and working towards a deployed solution by the end of the semester.
         </p>
         <h4>Prerequisites:</h4>
         <h4>Grading:</h4>
@@ -24,83 +33,94 @@
     </section>
     <br>
     <h3>Schedule Option 2 of 2</h3>
-    <table>
-        <tr>
-            <th>Topic</th>
-            <th>Learning Objectives</th>
-            <th>Materials</th>
-            <th>Assessments/Activities</th>
-        </tr>
-        <tr>
-            <td>
-                Getting Started
-            </td>
-            <td>
-                - Take on-boarding quiz<br>
-                - Take assessments via proctoring software<br>
-                - Set-up communications in Canvas<br>
-                - Access video materials<br>
-            </td>
-            <td>
-                - <a href="">On-boarding Quiz w/ ID verification (link unavailable)</a><br>
-                - Getting started completion block
-            </td>
-            <td>
-                - Coming soon
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Lesson 1
-            </td>
-            <td>
-                - Introductions<br>
-                - Course goals<br>
-                - Skills/Interests exercise<br>
-                - Team formation<br>
-            </td>
-            <td>
-                <strong>- Required reading:</strong><br>
-                <strong>- Optional suggested readings:</strong>
-            </td>
-            <td>
-                - Skills/Interests exercise
-            </td>
-        </tr>
+    <table class="styled-table">
+    	<thead>
+	        <tr>
+	            <th>Topic</th>
+	            <th>Learning Objectives</th>
+	            <th>Materials</th>
+	            <th>Assessments/Activities</th>
+	        </tr>
+        </thead>
+        <tbody>
+	        <tr>
+	            <td>
+	                Getting Started
+	            </td>
+	            <td>
+	                - Take on-boarding quiz<br>
+	                - Take assessments via proctoring software<br>
+	                - Set-up communications in Canvas<br>
+	                - Access video materials<br>
+	            </td>
+	            <td>
+	                - <a href="">On-boarding Quiz w/ ID verification (link unavailable)</a><br>
+	                - Getting started completion block
+	            </td>
+	            <td>
+	                - Coming soon
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 1
+	            </td>
+	            <td>
+	                - Introductions<br>
+	                - Course goals<br>
+	                - Skills/Interests exercise<br>
+	                - Team formation<br>
+	            </td>
+	            <td>
+	                <strong>- Required reading:</strong><br>
+	                <strong>- Optional suggested readings:</strong>
+	            </td>
+	            <td>
+	                - Skills/Interests exercise
+	            </td>
+	        </tr>
+        </tbody>
     </table>
 
     <h4>Graded Assignments and Distribution:</h4>
-    <table>
-        <tr>
-            <th>Assignment</th>
-            <th>Weight</th>
-            <th>Brief Description</th>
-        </tr>
-        <tr>
-            <td>
-                On-Boarding Quiz (required to verify identity using proctoring software)On-Boarding Quiz)
-            </td>
-            <td>
-                0% (required to verify identity using proctoring software)
-            </td>
-            <td>
-                Brief "test quiz"
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Assignment Group 1
-            </td>
-            <td>
-                %
-            </td>
-            <td>
-                Content coming soon
-            </td>
-        </tr>
+    <table class="styled-table">
+    	<thead>
+	        <tr>
+	            <th>Assignment</th>
+	            <th>Weight</th>
+	            <th>Brief Description</th>
+	        </tr>
+        </thead>
+        <tbody>
+	        <tr>
+	            <td>
+	                On-Boarding Quiz (required to verify identity using proctoring software)On-Boarding Quiz)
+	            </td>
+	            <td>
+	                0% (required to verify identity using proctoring software)
+	            </td>
+	            <td>
+	                Brief "test quiz"
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Assignment Group 1
+	            </td>
+	            <td>
+	                %
+	            </td>
+	            <td>
+	                Content coming soon
+	            </td>
+	        </tr>
+        </tbody>
     </table>
     <section>
         <h4>References:</h4>
+        Text: <a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a><br>
+        Papers:
+        <a href="https://dl.acm.org/doi/pdf/10.1145/2909609.2909657" target="_blank">The C4G BLIS experience</a>, <a href="https://smartech.gatech.edu/bitstream/handle/1853/48574/Sustainability%20Failures%20of%20Rural%20Telecenters%20Challenges%20from%20the%20Sustainable%20Access%20in%20Rural%20India%20%28SARI%29%20Project.pdf?sequence=1&isAllowed=y" target="_blank">The SARI project</a>
     </section>
 </body>
 </html>
