Refine OMSC4G.html, style.css

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -10,7 +10,7 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	<header>
 		<img src="gt-logo-gold-33percent.png" align="left">
 		<section class="bannertext">
-			<h2>C4G: Computing for Social Good</h2>
+			<h3>C4G: Computing for Social Good: Fall 2021</h3>
 	        <h4>Instructor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
         </section>	
 	</header>
@@ -19,20 +19,13 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
         <p>
             <span class="initialtext">How can computing help</span> make the world a better place? Can we avoid wars, alleviate homelessness and improve global health using computers? What are the technical challenges that arise and what humanistic issues have to be taken into account and understood in the process? In this C4G course, we explore problems faced by developing countries and underserved populations from a computing perspective. The course will be project-centered with teams of students choosing project topics early in the semester and working towards a deployed solution by the end of the semester.
         </p>
+        <h4>Course Description:</h4>
+        <h4>Learning Objectives:</h4>
         <h4>Prerequisites:</h4>
         <h4>Grading:</h4>
     </section>
-    <br>
-    <section>
-        <h3>Schedule Option 1 of 2</h3>
-        <h4>Schedule (tentative):</h4>
-        <ol>
-            <li>Introduction</li>
-            <li>Course goals, team formation</li>
-        </ol>
-    </section>
-    <br>
-    <h3>Schedule Option 2 of 2</h3>
+    
+    <h4>Schedule:</h4>
     <table class="styled-table">
     	<thead>
 	        <tr>
@@ -114,8 +107,64 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                Content coming soon
 	            </td>
 	        </tr>
+	        <tr>
+	            <td>
+	                Assignment Group 2
+	            </td>
+	            <td>
+	                %
+	            </td>
+	            <td>
+	                Content coming soon
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Assignment Group 3
+	            </td>
+	            <td>
+	                %
+	            </td>
+	            <td>
+	                Content coming soon
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Assignment Group 4
+	            </td>
+	            <td>
+	                %
+	            </td>
+	            <td>
+	                Content coming soon
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Assignment Group 5
+	            </td>
+	            <td>
+	                %
+	            </td>
+	            <td>
+	                Content coming soon
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Assignment Group 6
+	            </td>
+	            <td>
+	                %
+	            </td>
+	            <td>
+	                Content coming soon
+	            </td>
+	        </tr>
         </tbody>
     </table>
+    
     <section>
         <h4>References:</h4>
         Text: <a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a><br>
