Add lessons to table

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -23,7 +23,7 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
         <h4>Learning Objectives:</h4>
         <h4>Prerequisites:</h4>
         <h4>Grading:</h4>
-    </section>
+    </section><br>
     
     <h4>Schedule:</h4>
     <table class="styled-table">
@@ -32,7 +32,7 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	            <th>Topic</th>
 	            <th>Learning Objectives</th>
 	            <th>Materials</th>
-	            <th>Assessments/Activities</th>
+	            <th>Assessments, Activities</th>
 	        </tr>
         </thead>
         <tbody>
@@ -41,17 +41,19 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                Getting Started
 	            </td>
 	            <td>
-	                - Take on-boarding quiz<br>
-	                - Take assessments via proctoring software<br>
-	                - Set-up communications in Canvas<br>
-	                - Access video materials<br>
+	            	<ul>
+	                	<li>Take on-boarding quiz
+	                	<li>Take assessments via proctoring software
+	                	<li>Set up communication in Canvas
+	                	<li>Access video materials
+	                </ul>
 	            </td>
 	            <td>
 	                - <a href="">On-boarding Quiz w/ ID verification (link unavailable)</a><br>
 	                - Getting started completion block
 	            </td>
 	            <td>
-	                - Coming soon
+	                <strong>Project Due:</strong> TBA
 	            </td>
 	        </tr>
 	        <tr>
@@ -65,15 +67,184 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                - Team formation<br>
 	            </td>
 	            <td>
-	                <strong>- Required reading:</strong><br>
-	                <strong>- Optional suggested readings:</strong>
+	                <strong>Required Readings:</strong>
+	                <br><br>
+	                <strong>Optional Suggested Readings:</strong>
 	            </td>
 	            <td>
-	                - Skills/Interests exercise
+	                <strong>Project Due:</strong> Skills/Interests exercise
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 2
+	            </td>
+	            <td>
+	                - Learning from <em>Successes</em><br>
+	                - Examples of successes, failures<br>
+	                - Partner presentations <br>
+	                - Brainstorm project goals<br>
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <br><br>
+	                <strong>Optional Suggested Readings:</strong><br> 
+	                - The <a href="https://dl.acm.org/doi/pdf/10.1145/2909609.2909657" target="_blank">C4G BLIS experience</a><br>
+	                - CDC Global Health<br>
+	                - Cathy Rice?
+	            </td>
+	            <td>
+	                <strong>Project Due:</strong> Project goals
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 3
+	            </td>
+	            <td>
+	                - Learning from <em>Failures</em><br>
+	                - Examples of failures, successes<br>
+	                - Partner presentations<br>
+	                - Finding partners in your community<br>
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <br><br>
+	                <strong>Optional Suggested Readings:</strong><br>
+	                - United Way of Atlanta
+	            </td>
+	            <td>
+	                <strong>Project Due:</strong> Teams by end of the week
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 4
+	            </td>
+	            <td>
+	                - Partner presentations<br>
+	                - The role of technology<br>
+	                - Brainstorm deliverables<br>
+	                - Finding partners in your community<br>
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a>
+	                <br><br>
+	                <strong>Optional Suggested Readings:</strong><br>
+	                - Kentaro Toyama
+	            </td>
+	            <td>
+	                <strong>Assignment:</strong> Study of technology in an area of societal need
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 5
+	            </td>
+	            <td>
+	                - The Role of Technology in Society<br>
+	                - How to Evaluate<br>
+	                - Brainstorm deliverables<br>
+	                - Finding partners in your community<br>
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a>
+	                <br><br>
+	                <strong>Optional Suggested Readings:</strong><br>
+	                - Tapan Parikh/Neha Kumar
+	            </td>
+	            <td>
+	                <strong>Project due:</strong> Goals, deliverables
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 6
+	            </td>
+	            <td>
+	                - Project mini-presentations
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <br><br>
+	                <strong>Optional Suggested Readings:</strong><br>
+	            </td>
+	            <td>
+	                <strong>Project due:</strong> TBA
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 7
+	            </td>
+	            <td>
+	                - ICT4D, Sustainability
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <br><br>
+	                <strong>Optional Suggested Readings:</strong><br>
+	                - Mike Best
+	            </td>
+	            <td>
+	                <strong>Project due:</strong> Initial evaluations
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 8
+	            </td>
+	            <td>
+	                - Sustainable Interfaces<br>
+	                - Healthcare delivery
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <br><br>
+	                <strong>Optional Suggested Readings:</strong><br>
+	                - Gregory Abowd
+	                - Rosa Arriaga
+	            </td>
+	            <td>
+	                <strong>Project due:</strong> TBA
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 9
+	            </td>
+	            <td>
+	                - Social inequity
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <br><br>
+	                <strong>Optional Suggested Readings:</strong><br>
+	            </td>
+	            <td>
+	                <strong>Project due:</strong> TBA
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 10
+	            </td>
+	            <td>
+	                - Project evaluations
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <br><br>
+	                <strong>Optional Suggested Readings:</strong><br>
+	            </td>
+	            <td>
+	                <strong>Project due:</strong> TBA
 	            </td>
 	        </tr>
         </tbody>
-    </table>
+    </table><br>
 
     <h4>Graded Assignments and Distribution:</h4>
     <table class="styled-table">
@@ -93,7 +264,7 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                0% (required to verify identity using proctoring software)
 	            </td>
 	            <td>
-	                Brief "test quiz"
+	                Brief quiz to check functionality
 	            </td>
 	        </tr>
 	        <tr>
@@ -163,7 +334,7 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	            </td>
 	        </tr>
         </tbody>
-    </table>
+    </table><br>
     
     <section>
         <h4>References:</h4>
