Complete the lessons section

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -49,8 +49,10 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                </ul>
 	            </td>
 	            <td>
-	                - <a href="">On-boarding Quiz w/ ID verification (link unavailable)</a><br>
-	                - Getting started completion block
+	            	<ul>
+	                	<li><a href="">On-boarding Quiz w/ ID verification (link unavailable)</a><br>
+	                	<li>Getting started completion block
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Project Due:</strong> TBA
@@ -61,15 +63,20 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                Lesson 1
 	            </td>
 	            <td>
-	                - Introductions<br>
-	                - Course goals<br>
-	                - Skills/Interests exercise<br>
-	                - Team formation<br>
+	                <ul>
+	                	<li>Introductions
+	                	<li>Course goals
+		                <li>Skills/Interests exercise
+		               	<li>Team formation
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Required Readings:</strong>
-	                <br><br>
+	                <ul class="whead">
+	                </ul>                
 	                <strong>Optional Suggested Readings:</strong>
+	                <ul class="whead">
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Project Due:</strong> Skills/Interests exercise
@@ -80,18 +87,23 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                Lesson 2
 	            </td>
 	            <td>
-	                - Learning from <em>Successes</em><br>
-	                - Examples of successes, failures<br>
-	                - Partner presentations <br>
-	                - Brainstorm project goals<br>
+	            	<ul>
+	                	<li>Learning from <em>Successes</em>
+		                <li>Examples of successes, failures
+		                <li>Partner presentations
+		                <li>Brainstorm project goals
+		            </ul>
 	            </td>
 	            <td>
 	                <strong>Required Readings:</strong>
-	                <br><br>
-	                <strong>Optional Suggested Readings:</strong><br> 
-	                - The <a href="https://dl.acm.org/doi/pdf/10.1145/2909609.2909657" target="_blank">C4G BLIS experience</a><br>
-	                - CDC Global Health<br>
-	                - Cathy Rice?
+	                <ul class="whead">
+	                </ul>
+	                <strong>Optional Suggested Readings:</strong>
+	                <ul class="whead"> 
+	                	<li>The <a href="https://dl.acm.org/doi/pdf/10.1145/2909609.2909657" target="_blank">C4G BLIS experience</a>
+		                <li>CDC Global Health
+		                <li>Cathy Rice?
+		            </ul>
 	            </td>
 	            <td>
 	                <strong>Project Due:</strong> Project goals
@@ -102,16 +114,21 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                Lesson 3
 	            </td>
 	            <td>
-	                - Learning from <em>Failures</em><br>
-	                - Examples of failures, successes<br>
-	                - Partner presentations<br>
-	                - Finding partners in your community<br>
+	            	<ul>
+		                <li>Learning from <em>Failures</em>
+		               	<li>Examples of failures, successes
+		                <li>Partner presentations
+		                <li>Finding partners in your community
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Required Readings:</strong>
-	                <br><br>
+	                <ul class="whead">
+	                </ul>
 	                <strong>Optional Suggested Readings:</strong><br>
-	                - United Way of Atlanta
+	                <ul class="whead">
+	                	<li>United Way of Atlanta
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Project Due:</strong> Teams by end of the week
@@ -122,17 +139,22 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                Lesson 4
 	            </td>
 	            <td>
-	                - Partner presentations<br>
-	                - The role of technology<br>
-	                - Brainstorm deliverables<br>
-	                - Finding partners in your community<br>
+	            	<ul>
+		                <li>Partner presentations
+		                <li>The role of technology
+		                <li>Brainstorm deliverables
+		                <li>Finding partners in your community
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Required Readings:</strong>
-	                <a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a>
-	                <br><br>
-	                <strong>Optional Suggested Readings:</strong><br>
-	                - Kentaro Toyama
+	                <ul class="whead">               
+	                	<li><a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a>
+	                </ul>
+	                <strong>Optional Suggested Readings:</strong>
+	                <ul class="whead"> 
+	                	<li>Kentaro Toyama
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Assignment:</strong> Study of technology in an area of societal need
@@ -143,17 +165,22 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                Lesson 5
 	            </td>
 	            <td>
-	                - The Role of Technology in Society<br>
-	                - How to Evaluate<br>
-	                - Brainstorm deliverables<br>
-	                - Finding partners in your community<br>
+		            <ul>
+			            <li>The Role of Technology in Society
+			            <li>How to Evaluate
+			            <li>Brainstorm deliverables
+			            <li>Finding partners in your community
+		            </ul>
 	            </td>
 	            <td>
 	                <strong>Required Readings:</strong>
-	                <a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a>
-	                <br><br>
-	                <strong>Optional Suggested Readings:</strong><br>
-	                - Tapan Parikh/Neha Kumar
+	                <ul class="whead">
+	                	<li><a href="https://www.amazon.com/Geek-Heresy-Rescuing-Social-Technology/dp/161039528X" target="_blank">Geek Heresy: Rescuing Social Change from the Cult of Technology</a>
+	                </ul>
+	                <strong>Optional Suggested Readings:</strong>
+	                <ul class="whead">
+	                	<li>Tapan Parikh/Neha Kumar
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Project due:</strong> Goals, deliverables
@@ -164,12 +191,17 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                Lesson 6
 	            </td>
 	            <td>
-	                - Project mini-presentations
+	            <ul>
+	            	<li>Project mini-presentations
+	            </ul>
 	            </td>
 	            <td>
 	                <strong>Required Readings:</strong>
-	                <br><br>
-	                <strong>Optional Suggested Readings:</strong><br>
+	                <ul class="whead">
+	                </ul>
+	                <strong>Optional Suggested Readings:</strong>
+	                <ul class="whead">
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Project due:</strong> TBA
@@ -180,13 +212,18 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                Lesson 7
 	            </td>
 	            <td>
-	                - ICT4D, Sustainability
+		            <ul>
+		            	<li>ICT4D, Sustainability
+		            </ul>
 	            </td>
 	            <td>
 	                <strong>Required Readings:</strong>
-	                <br><br>
+	                <ul class="whead">
+	                </ul>
 	                <strong>Optional Suggested Readings:</strong><br>
-	                - Mike Best
+	                <ul class="whead">
+	                	<li>Mike Best
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Project due:</strong> Initial evaluations
@@ -197,15 +234,20 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                Lesson 8
 	            </td>
 	            <td>
-	                - Sustainable Interfaces<br>
-	                - Healthcare delivery
+	            	<ul>
+		                <li>Sustainable Interfaces
+		                <li>Healthcare delivery
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Required Readings:</strong>
-	                <br><br>
-	                <strong>Optional Suggested Readings:</strong><br>
-	                - Gregory Abowd
-	                - Rosa Arriaga
+	                <ul class="whead">
+	                </ul>
+	                <strong>Optional Suggested Readings:</strong>
+	                <ul class="whead">
+	               		<li>Gregory Abowd
+	                	<li>Rosa Arriaga
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Project due:</strong> TBA
@@ -216,12 +258,17 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                Lesson 9
 	            </td>
 	            <td>
-	                - Social inequity
+	            	<ul>
+	                	<li>Social inequity
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Required Readings:</strong>
-	                <br><br>
-	                <strong>Optional Suggested Readings:</strong><br>
+	                <ul class="whead">
+	                </ul>
+	                <strong>Optional Suggested Readings:</strong>
+	                <ul class="whead">
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Project due:</strong> TBA
@@ -232,15 +279,128 @@ https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l -->
 	                Lesson 10
 	            </td>
 	            <td>
-	                - Project evaluations
+	            	<ul>
+	                	<li>Project evaluations
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Required Readings:</strong>
-	                <br><br>
-	                <strong>Optional Suggested Readings:</strong><br>
+	                <ul class="whead">
+	                </ul>
+	                <strong>Optional Suggested Readings:</strong>
+	                <ul class="whead">
+	                </ul>
 	            </td>
 	            <td>
 	                <strong>Project due:</strong> TBA
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 11
+	            </td>
+	            <td>
+	            	<ul>
+	                	<li>Systems vs Human infrastructure
+	                </ul>
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <ul class="whead">
+	                </ul>
+	                <strong>Optional Suggested Readings:</strong>
+	                <ul class="whead">
+	                	<li>Pinar Keskinocak
+	                	<li>Julie Swann
+	                </ul>
+	            </td>
+	            <td>
+	                <strong>Project due:</strong> TBA
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 12
+	            </td>
+	            <td>
+	            	<ul>
+	                	<li>Connectivity
+	                </ul>
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <ul class="whead">
+	                	<li><a href="https://smartech.gatech.edu/bitstream/handle/1853/48574/Sustainability Failures of Rural Telecenters Challenges from the Sustainable Access in Rural India %28SARI%29 Project.pdf?sequence=1&isAllowed=y" target="_blank">The SARI project</a>
+	                </ul>
+	                <strong>Optional Suggested Readings:</strong>
+	                <ul class="whead">
+	                </ul>
+	            </td>
+	            <td>
+	                <strong>Project due:</strong> TBA
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 13
+	            </td>
+	            <td>
+	            	<ul>
+	                	<li>Project feedback session
+	                </ul>
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <ul class="whead">
+	                </ul>
+	                <strong>Optional Suggested Readings:</strong>
+	                <ul class="whead">
+	                </ul>
+	            </td>
+	            <td>
+	                <strong>Project due:</strong> Demo
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 14
+	            </td>
+	            <td>
+	            	<ul>
+	                	<li>Project demos, evaluations
+	                </ul>
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <ul class="whead">
+	                </ul>
+	                <strong>Optional Suggested Readings:</strong>
+	                <ul class="whead">
+	                </ul>
+	            </td>
+	            <td>
+	                <strong>Project due:</strong> TBA
+	            </td>
+	        </tr>
+	        <tr>
+	            <td>
+	                Lesson 15
+	            </td>
+	            <td>
+	            	<ul>
+	                	<li>Project presentations
+	                </ul>
+	            </td>
+	            <td>
+	                <strong>Required Readings:</strong>
+	                <ul class="whead">
+	                </ul>
+	                <strong>Optional Suggested Readings:</strong>
+	                <ul class="whead">
+	                </ul>
+	            </td>
+	            <td>
+	                <strong>Project due:</strong> Report
 	            </td>
 	        </tr>
         </tbody>
